--- a/theme.css
+++ b/theme.css
@@ -63,7 +63,7 @@ h1{
     z-index: 5;
 
     width: 60%;
-    height: 45%;
+    height: 50%;
 
     margin: 5% 20%;
 
@@ -148,7 +148,7 @@ h1{
 #back{
     display: block;
     width: 30%;
-    height: 5vh;
+    height: 7.5vh;
 
     margin-left: 35%;
     margin-right: 35%;
@@ -354,11 +354,6 @@ h2{
     overflow-y: auto;
 }
 
-/*タブレット用*/
-@media screen and (max-width: 959px){
-
-}
-
 /*スマホ用*/
 @media screen and (max-width: 480px){
     html, body{
@@ -550,5 +545,109 @@ h2{
 
     .container{
         display: none;
+    }
+
+    #maxnum{
+        display: inline-block;
+        width: 50%;
+        height: 7.5vh;
+    
+        margin-left: 25%;
+        margin-right: 25%;
+        margin-top: 1.5%;
+    
+        font-size: 2rem;
+        font-family: Montserrat, sans-serif;
+        font-weight: bold;
+        font-variant-numeric: tabular-nums;
+        text-align: center;
+        color: #ffffff;
+    
+        border-radius: 10px;
+        border: #0d1029 1px solid;
+        background-color: #0d1029;
+    }
+    
+    #maxnum:focus{
+        color: #0d1029;
+        background-color: #ffffff;
+    }
+    
+    #close{
+        display: block;
+        width: 60%;
+        height: 7vh;
+    
+        margin-left: 20%;
+        margin-right: 20%;
+        margin-top: 5%;
+    
+        font-size: 1.75rem;
+        font-family: Montserrat;
+        font-weight: bold;
+        font-variant-numeric: tabular-nums;
+        text-align: center;
+        color: #ffffff;
+    
+        border-radius: 10px;
+        border: #0d1029 1px solid;
+        background-color: #0d1029;
+    }
+
+    #back{
+        display: block;
+        width: 60%;
+        height: 7vh;
+    
+        margin-left: 20%;
+        margin-right: 20%;
+        margin-top: 1.5%;
+    
+        font-size: 1.25rem;
+        font-family: Montserrat;
+        font-weight: bold;
+        font-variant-numeric: tabular-nums;
+        text-align: center;
+        color: #ffffff;
+    
+        border-radius: 10px;
+        border: #0d1029 1px solid;
+        background-color: #0d1029;
+    }
+
+    #setting{
+        display: none;
+        position: absolute;
+        z-index: 5;
+    
+        width: 60%;
+        height: 35%;
+    
+        margin: 5% 20%;
+    
+        background-color: #ffffff;
+        border: #0d1029 1px solid;
+        border-radius: 30px;
+    }
+    
+    #setting.panelactive{
+        display: block;
+    }
+    
+    #setting label{
+        display: inline-block;
+        width: 70%;
+    
+        margin-left: 15%;
+        margin-right: 15%;
+        margin-top: 5%;
+    
+        font-size: 1.75rem;
+        font-family: Raleway, sans-serif;
+        font-weight: normal;
+        font-variant-numeric: tabular-nums;
+        text-align: center;
+        color: #0d1029;
+    
     }
 }
